Added functionalities for version 2

--- a/test/Makefile
+++ b/test/Makefile
@@ -18,7 +18,7 @@ $(objects): %.o: %.cpp
 
 celcius:
 	$(CXX) -I $(INC_DIR) test_sensor_thermostat.cpp test_data_acq.cpp -fPIC -shared -o celcius_test.so
-	$(CXX) -I $(INC_DIR) $(objects) -pthread -destdir/lib $(GT_LIB)libgtest.a $(GT_LIB)libgtest_main.a $(SRC_LIB)sensor_thermostat.a $(SRC_LIB)data_acq.a -o celcius_test
+	$(CXX) -I $(INC_DIR) $(objects) -pthread -destdir/lib $(GT_LIB)libgtest.a $(GT_LIB)libgtest_main.a $(SRC_LIB)sensor_thermostat.a $(SRC_LIB)sensor_thermal.a $(SRC_LIB)data_acq.a $(SRC_LIB)sensor_ir.a -o celcius_test
 
 copy:
 	cp $(CPFLAGS) celcius_test $(BLD_BDIR).
